<resources>
    <string name="app_name">+Questões</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Facebook -->
    <string name="facebook_app_id">371371396245977</string>

    <!-- Menu (Left Drawer)-->
    <string name="mnu_subitems">Sub Items</string>

    <!-- Activities -->
    <string name="ac_main">Main</string>
    <string name="ac_login">Login</string>
    <string name="ac_signup">Inscrever-se</string>

    <string name="str_login_user">Usuário</string>
    <string name="str_login_pass">Senha</string>

    <string name="str_singup_name">Nome Completo</string>
    <string name="str_singup_email">Email</string>
    <string name="str_singup_username">Usuário</string>
    <string name="str_singup_pass">Senha</string>
    <string name="str_singup_confirmpass">Confirme a senha</string>
    <string name="str_singup_showpass">Mostrar senha</string>
    <string name="str_signup_register">INSCREVER-SE</string>
    <string name="err_signup_username_empty">Usuário Inválido</string>
    <string name="err_signup_firstname_empty">Informe o Nome</string>
    <string name="err_signup_email_empty">Informe o Email</string>
    <string name="err_signup_confirmpassword_empty">Confirme a senha</string>
    <string name="err_signup_password_empty">Informe a senha</string>

    <string name="str_login_enter">Entrar</string>
    <string name="str_login_preview_enter">Entrar</string>
    <string name="str_login_preview_signup">Increver-se</string>

    <string name="msg_logging">Logando</string>
    <string name="msg_wait">Aguarde um momento</string>
    <string name="ac_preconfiguration">Pré Configuração</string>
    <string name="action_logout">Sair</string>
    <string name="action_profile">Perfil</string>
    <string name="action_search">Pesquisar</string>
    <string name="search_hint">Pesquisar</string>
    <string name="str_login_preview_signinfb">INICIAR COM FACEBOOK</string>
    <string name="msg_load">Carregando</string>
    <string name="str_toolbar_question_subjects">Administração Geral</string>
    <string name="str_questions_cont">01 de 50</string>
    <string name="str_questions_chrono">00:01:20</string>
    <string name="str_answer">estudar os movimentos necessários para a execução de uma tarefa com o intuito de simplificá-los e reduzí-los ao mínimo</string>
    <string name="ac_question">Questão</string>
    <string name="str_advertise_text2">Música sem limites</string>
    <string name="str_advertise_text1">FAÇA UPGRADE PARA TOCAR QUALQUER MÚSICA</string>
    <string name="str_advertise_text3">Com o premium, você pode tocar qualquer música, a qualquer hora.</string>
    <string name="str_advertise_text4">Sem propaganda. Sem restrições.</string>
    <string name="str_advertise_button">TENHA OS PRIMEIROS 30 DIAS DE GRAÇA</string>

</resources>
