<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white">

    <include
        android:id="@+id/inc_login_toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_below="@+id/inc_login_toolbar"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_login_frag_user"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_login_user"
                android:text="helio"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_login_frag_pass"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/str_login_pass"
                android:text="123456"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_login_mq"
        android:layout_width="fill_parent"
        android:text="@string/str_login_enter"
        android:textColor="@color/btn_txt_white"
        android:background="@color/btn_orange"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"/>

    <com.facebook.login.widget.LoginButton
        android:id="@+id/btn_login_fb"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:visibility="gone"/>

</LinearLayout>